# gmth23-bayes-workshop

./: LICENSE  README.md  bigrams.tsv  intervals_exercise.ipynb  intervals_exercise_solution.ipynb  models.ipynb  models_mse.ipynb  models_mse_exercise.ipynb  prepare_data.py  pyproject.toml  regularity.ipynb  requirements.txt  slides_example.ipynb
presentation/: 01-generative-modeling.typ  02-bayesian-inference.typ  03-inference-methods.typ  slides-gmth.typ  slides.typ
presentation/img/: bayes-net1.typ  bayes-net2.typ  bayesnet_markov.tex  bayesnet_position.tex  bayesnet_rhythms.tex  fragment.ily  rhythm1.ly  rhythm2.ly
